# asx_announcement_scraper

./: .gitignore  AUTH_SETUP.md  CLAUDE.md  DEPLOYMENT.md  README.md  STRIPE_SETUP.md  TESTING_CHECKLIST.md  TODO.md  docker-compose.yml
backend/: .env.example  .env.railway.template  API_README.md  NOTES.md  Procfile  README.md  alembic.ini  pyproject.toml  railway.json  test_intelligence_layer.py  test_pipeline.py
backend/alembic/: env.py
backend/alembic/versions/: c592e7ad4b2c_initial_migration_create_all_tables.py
backend/app/: config.py  main.py
backend/app/api/: schemas.py
backend/app/api/routes/: announcements.py  auth.py  companies.py  subscriptions.py
backend/app/auth/: __init__.py  dependencies.py  jwt.py  schemas.py
backend/app/db/: __init__.py  base.py  crud.py  session.py
backend/app/models/: README.md  __init__.py  analysis.py  announcement.py  company.py  stock_data.py  subscription.py  user.py  watchlist.py
backend/app/services/: llm_analyzer.py  pdf_downloader.py  pdf_downloader_playwright.py  pdf_processor.py  pipeline.py  scheduler.py  schemas.py  scraper.py  stock_data.py  stripe_service.py
backend/app/services/storage/: __init__.py  base.py  factory.py  local.py
backend/scripts/: debug_html.py  debug_pdf_url.py  find_price_sensitive.py  test_pdf_downloader.py  test_pdf_endpoints.py  test_pdf_processor.py  test_playwright_downloader.py  test_scraper.py
frontend/: .env.example  .env.production.template  README.md  package.json  vercel.json
frontend/app/: layout.tsx  page.tsx
frontend/app/announcements/: page.tsx
frontend/app/login/: page.tsx
frontend/app/pricing/: page.tsx
frontend/app/subscription/: page.tsx
frontend/components/: AnnouncementCard.tsx  FilterBar.tsx  Header.tsx
frontend/contexts/: AuthContext.tsx
frontend/lib/: api.ts  auth.ts  stripe.ts
scripts/: deploy-check.sh  generate-secrets.py
(+2 files in other folders)
